fixed header alignment

--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -24,18 +24,18 @@ h5 {
 }
 header {
   display: flex;
-  justify-content: space-around;
   max-height: 35px;
   margin-top: 15px;
 }
 
 nav {
-  width: 60%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
 }
 
 nav a {
+  width: 70%;
   display: flex;
   align-items: flex-end;
   text-decoration: none;
@@ -51,6 +51,11 @@ nav a {
   padding-bottom: 30px;
   border-bottom: 1px solid black;
 }
+
+.card {
+  background: lightgray;
+}
+
 footer {
   display: flex;
   justify-content: center;
